--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "egg-mysql": "^3.1.0",
     "egg-scripts": "^2.11.0",
     "mkdirp": "^1.0.4",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "qs": "^6.10.3"
   },
   "devDependencies": {
     "autod": "^3.0.1",
