--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "egg-cors": "^2.2.3",
     "egg-jwt": "^3.1.7",
     "egg-mysql": "^3.1.0",
+    "egg-redis": "^2.4.0",
     "egg-scripts": "^2.11.0",
+    "egg-socket.io": "^4.1.6",
     "mkdirp": "^1.0.4",
     "moment": "^2.29.1",
     "qs": "^6.10.3"
