--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "declarations": true
   },
   "dependencies": {
+    "chatgpt": "^5.1.2",
+    "chatgpt-prompts": "^3.0.0",
     "egg": "^2.15.1",
+    "egg-chatgpt": "^1.0.5",
     "egg-cors": "^2.2.3",
     "egg-jwt": "^3.1.7",
     "egg-mysql": "^3.1.0",
@@ -15,7 +18,9 @@
     "egg-websocket-plugin": "^1.0.1",
     "mkdirp": "^1.0.4",
     "moment": "^2.29.1",
+    "openai": "^3.2.1",
     "qs": "^6.10.3",
+    "readline-sync": "^1.4.10",
     "stream-to-array": "^2.3.0"
   },
   "devDependencies": {
